Удален .DS_Store и добавлен в gitignore

--- a/.env.example
+++ b/.env.example
@@ -1,44 +1,47 @@
+# Общие настройки Laravel
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY= # Будет сгенерирован: php artisan key:generate
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000 # Коллега укажет свой URL
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
 
+# Логи
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+# База данных (PostgreSQL)
+DB_CONNECTION=pgsql
+DB_HOST=db
+DB_PORT=5432
+DB_DATABASE=mini-app
+DB_USERNAME=user
+DB_PASSWORD= # Коллега укажет свой пароль
 
+# Сессии
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
+# Другие настройки
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-# CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -47,6 +50,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# Почта (для тестов)
 MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
@@ -56,6 +60,7 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+# AWS (если не используете, оставить пустым)
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
@@ -63,3 +68,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Telegram (токен и URL указать свои)
+TELEGRAM_BOT_TOKEN= # Коллега получит свой токен через @BotFather
+TELEGRAM_MINI_APP_URL= # Указать свой URL Mini App
+TELEGRAM_IMAGE_URL={укажи свой url}/expert.jpg
+
+JWT_SECRET= # Будет сгенерирован: php artisan jwt:secret
