--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,15 @@ services:
             -   .env
         container_name: php_container
         volumes:
-            -   .:/var/www
+            - ./app:/var/www/app
+            - ./bootstrap:/var/www/bootstrap
+            - ./config:/var/www/config
+            - ./database:/var/www/database
+            - ./routes:/var/www/routes
+            - ./resources:/var/www/resources
+            - ./storage:/var/www/storage
+            - ./public/index.php:/var/www/public/index.php
+            - ./public/.htaccess:/var/www/public/.htaccess
         networks:
             -   app-network
         depends_on:
@@ -32,6 +40,7 @@ services:
             -   '8000:80'
         volumes:
             - ./public:/var/www/public
+            - ./storage:/var/www/storage:ro
             - ./nginx.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             -   php
