--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "defstudio/telegraph": "^1.59",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
