--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
             -   .env
         container_name: php_container
         volumes:
+            - ./.env:/var/www/.env
             - ./app:/var/www/app
             - ./bootstrap:/var/www/bootstrap
             - ./config:/var/www/config
