--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,13 @@
 server {
     listen 80;
     index index.php index.html;
-    server_name localhost;
+    server_name _;
     root /var/www/public;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
+
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
@@ -16,6 +18,7 @@ server {
     }
 
     location /storage {
+        alias /var/www/storage/app/public;
         try_files $uri $uri/ =404;
     }
 }
