--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /storage/pail
 /vendor
 .env
+.env.testing
 .env.backup
 .env.production
 .phpactor.json
@@ -24,3 +25,6 @@ yarn-error.log
 .DS_Store
 .git
 *.log
+supervisord.pid
+*.pid
+supervisord.sock
