--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     index index.php index.html;
     server_name _;
-    root /var/www/public;
+    root /var/www/mini-app;
 
     client_max_body_size 2M;
 
@@ -12,7 +12,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
+        fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -20,7 +20,7 @@ server {
     }
 
     location /storage {
-        alias /var/www/storage/app/public;
+        alias /var/www/mini-app/storage/app/public;
         try_files $uri $uri/ =404;
     }
 }
