--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,17 @@ yarn-error.log
 supervisord.pid
 *.pid
 supervisord.sock
+/storage/*
+!storage/app
+!storage/app/.gitignore
+!storage/framework
+!storage/framework/cache
+!storage/framework/cache/.gitignore
+!storage/framework/sessions
+!storage/framework/sessions/.gitignore
+!storage/framework/testing
+!storage/framework/testing/.gitignore
+!storage/framework/views
+!storage/framework/views/.gitignore
+!storage/logs
+!storage/logs/.gitignore
